# ProspectRL

./: .gitignore  CLAUDE.md  README.md  config.py  evaluate.py  evaluate_multiagent.py  pyproject.toml  run_cache.sh  run_extract.sh  train.py  train_multiagent.py  viz_episode.py  viz_multi.py  viz_world.py
.claude/commands/: analyze-training.md  push.md
deployment/: inference_server.py  model_export.py
deployment/lua/: turtle_client.lua
env/: action_masking.py  mining_env.py  preference.py  reward_vector.py  turtle.py  worldgen_parser.py
env/world/: biome.py  cave_generation.py  mc_block_mapping.py  noise_utils.py  ore_distribution.py  protocols.py  real_chunk_world.py  world.py
models/: callbacks.py  policy_network.py  ppo_config.py
multiagent/: belief_map.py  config.py  geological_prior.py  pathfinding.py  shared_world.py  telemetry.py
multiagent/agent/: agent_policy.py  communication.py  multi_agent_env.py  task_rewards.py
multiagent/coordinator/: assignment.py  coordinator.py  gnn.py
multiagent/training/: coordinator_trainer.py  multi_agent_vec_env.py  phase1_env.py  task_sampler.py
notebooks/: colab_training.ipynb
prospect_rl/tools/: __init__.py  analyze_chunks.py  cache_chunks.py  calibrate_prior.py  evaluate_prior.py  generate_solid_profile.py
tests/deployment/: test_server.py
tests/env/: test_env.py  test_protocols.py  test_real_chunk_world.py  test_reward.py  test_training_integration.py  test_world.py
tests/models/: test_ppo.py
tests/multiagent/: test_distribution_rewards.py  test_geological_prior.py  test_phase1_fixes.py  test_pretrain_sanity.py
